--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
-  "name": "weather-cli-nodejs",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT"
+	"name": "weather-cli-nodejs",
+	"version": "1.0.0",
+	"main": "weather.js",
+	"type": "module",
+	"bin": {
+		"weather": "weather.js"
+	},
+	"license": "MIT",
+	"scripts": {
+		"start": "node weather.js"
+	},
+	"dependencies": {
+		"axios": "^1.7.2",
+		"chalk": "^5.3.0",
+		"dedent-js": "^1.0.1"
+	}
 }
