--- a/package.json
+++ b/package.json
@@ -1,18 +1,34 @@
 {
-	"name": "weather-cli-nodejs",
+	"name": "weather-cli-demo",
 	"version": "1.0.0",
+	"description": "CLI for getting weather",
 	"main": "weather.js",
-	"type": "module",
 	"bin": {
 		"weather": "weather.js"
 	},
-	"license": "MIT",
+	"type": "module",
 	"scripts": {
-		"start": "node weather.js"
+		"start": "node weather.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"cli",
+		"weather"
+	],
+	"author": "Anton Larichev",
+	"license": "ISC",
+	"homepage": "https://purpleschool.ru",
+	"repository": {
+		"type": "git",
+		"url": "https://purpleschool.ru"
+	},
+	"bugs": {
+		"url": "https://purpleschool.ru",
+		"email": "antonlarichev@gmail.com"
 	},
 	"dependencies": {
-		"axios": "^1.7.2",
-		"chalk": "^5.3.0",
+		"axios": "^0.21.4",
+		"chalk": "^4.1.2",
 		"dedent-js": "^1.0.1"
 	}
 }
